--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Bootstrap library fonte-awesome -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/style.css">
+
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
@@ -141,10 +142,11 @@
             <div class="green-divider"></div>
             <div id="carousel_avis" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active avis_rows3" data-interval="5000">
-
+                    <div class="carousel-item active avis_rows3" data-interval="20000">
                         <div class="block_avis">
-                            <div><span class="avis_texte">"Un grand merci pour vos conseils"</span></div>
+                            <div class="avis_texte">
+                                <p>"Un grand merci pour vos conseils"</p>
+                            </div>
                             <div class="note"><span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
@@ -156,9 +158,10 @@
                             </div>
                         </div>
 
-
                         <div class="block_avis">
-                            <div><span class="avis_texte">"Ravi de mon achat, réceptionné dans les délais"</span></div>
+                            <div class="avis_texte">
+                                <p>"Ravi de mon achat, réceptionné dans les délais"</p>
+                            </div>
                             <div class="note"><span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
@@ -170,7 +173,9 @@
                             </div>
                         </div>
                         <div class="block_avis">
-                            <div><span class="avis_texte">"Journée inoubliable avec Eric, expert en relooking"</span></div>
+                            <div class="avis_texte">
+                                <p>"Journée inoubliable avec Eric, expert en relooking"</p>
+                            </div>
                             <div class="note"><span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
@@ -181,10 +186,14 @@
                                 <p class="avis_nom">Julie</p>
                             </div>
                         </div>
+
                     </div>
+
                     <div class="carousel-item avis_rows3">
                         <div class="block_avis">
-                            <div><span class="avis_texte">"Je recommande, bon service client"</span></div>
+                            <div class="avis_texte">
+                                <p>"Je recommande, bon service client"</p>
+                            </div>
                             <div class="note"><span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
@@ -196,7 +205,9 @@
                             </div>
                         </div>
                         <div class="block_avis">
-                            <div><span class="avis_texte">"Bien conseillé, le cadeau a été apprécié"</span></div>
+                            <div class="avis_texte">
+                                <p>"Bien conseillé, le cadeau a été apprécié"</p>
+                            </div>
                             <div class="note"><span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
@@ -208,7 +219,10 @@
                             </div>
                         </div>
                         <div class="block_avis">
-                            <div><span class="avis_texte">"Vendeurs agréables et souriants"</span></div>
+                            <div class="avis_texte">
+
+                                <p>"Vendeurs agréables et souriants"</p>
+                            </div>
                             <div class="note"><span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
