--- a/pages/laboutique/notrehistoire.html
+++ b/pages/laboutique/notrehistoire.html
@@ -82,7 +82,7 @@
                     <div class="card-body d-flex flex-column presse-actu">
                         <h2 class="card-title">À Milan, des défilés virtuels pour la Fashion Week</h2>
                         <p class="card-text">«Le numérique ne remplace pas l'émotion du spectacle physique mais c'est grâce au numérique que le secteur se maintient», note…</p>
-                        <a class="btn_link mt-auto actu" href="https://www.frenchweb.fr/a-milan-des-defiles-virtuels-pour-la-fashion-week/405578" role="button">Lire la suite</a>
+                        <a class="btn_link mt-auto actu" href="https://www.frenchweb.fr/a-milan-des-defiles-virtuels-pour-la-fashion-week/405578">Lire la suite</a>
                     </div>
                 </div>
 
@@ -91,7 +91,7 @@
                     <div class="card-body d-flex flex-column presse-actu">
                         <h2 class="card-title">Les annonces retail qu’il ne fallait pas manquer depuis la rentrée</h2>
                         <p class="card-text">Si certains secteurs ont été sinistrés par la crise du Covid-19, d’autres ont bénéficié de l’engouement pour la technologie et…</p>
-                        <a class="btn_link mt-auto actu" href="https://www.frenchweb.fr/les-annonces-retail-quil-ne-fallait-pas-manquer-depuis-la-rentree/407128 " role="button ">Lire la suite</a>
+                        <a class="btn_link mt-auto actu" href="https://www.frenchweb.fr/les-annonces-retail-quil-ne-fallait-pas-manquer-depuis-la-rentree/407128">Lire la suite</a>
                     </div>
                 </div>
                 <div class="col-10 col-sm-5 col-lg-3 mx-4 my-3 card">
@@ -99,12 +99,11 @@
                     <div class="card-body d-flex flex-column presse-actu">
                         <h2 class="card-title">Les enjeux des marketplaces, «un sujet relativement méconnu du public et des retailers» ?</h2>
                         <p class="card-text">Au-delà de la concurrence pour gagner des parts de marché, les marketplaces doivent faire face à d’autres enjeux tout aussi…</p>
-                        <a class="btn_link mt-auto actu" href="https://www.frenchweb.fr/les-enjeux-des-marketplaces-un-sujet-relativement-meconnu-du-public-et-des-retailers/401131" role="button">Lire la suite</a>
+                        <a class="btn_link mt-auto actu" href="https://www.frenchweb.fr/les-enjeux-des-marketplaces-un-sujet-relativement-meconnu-du-public-et-des-retailers/401131">Lire la suite</a>
                     </div>
                 </div>
             </div>
-
-
+        </div>
     </main>
 
     <hr/>
