avant-test-carousel

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!--Corps-->
     <main class="main_index">
 
-        <div id="carousel_main" class="carousel slide" data-ride="carousel">
+        <div id="carousel_main" class="carousel slide carousel-fade" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carousel_main" data-slide-to="0" class="active"></li>
                 <li data-target="#carousel_main" data-slide-to="1"></li>
@@ -40,14 +40,14 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="/images/image_boutique_test.jpg" alt="First slide">
+                    <img class="d-block w-100" src="/images/image_boutique.webp" alt="First slide">
                     <div class="carousel-caption d-xs-block">
                         <h1>Ouverture de notre boutique Parisienne</h1>
                         <a class="btn_link" href="/pages/laboutique/notrehistoire.html" role="button">Je découvre la boutique</a>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="/images/people_test.jpg" alt="Second slide">
+                    <img class="d-block w-100" src="/images/people-2603521_1280.jpg" alt="Second slide">
                     <div class="carousel-caption d-xs-block">
                         <h2>Découvrir nos collections</h2>
                         <a class="btn_link" href="/pages/femme/femme_categories.html" role="button">Collection Femme</a>
@@ -56,7 +56,7 @@
 
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="/images/relooking_il_test.jpg" alt="Third slide">
+                    <img class="d-block w-100" src="/images/relooking_il.jpg" alt="Third slide">
                     <div class="carousel-caption d-xs-block">
                         <h2>Venez vivre une expérience unique<br>Coaching Personnalisé</h2>
                         <a class="btn_link" href="/pages/laboutique/reservation.html" role="button">Je Réserve !</a>
@@ -82,8 +82,8 @@
                     <div class="col-6 col-lg-3">
                         <div class="card my-3 border-grey shadow">
                             <a class="stretched-link" href="/pages/femme/produits/manteau1.html"><img class="card-img-top" src="/images/femme/pret-a-porter/veste-manteau/manteau1/manteau1_main.jpg" alt="Manteau imitation fourrure"></a>
-                            <div class="card-body">
-                                <h4 class="card-title">Manteau fourrure</h4>
+                            <div class="carte-article card-body">
+                                <h3 class="card-title">Manteau fourrure</h3>
                                 <span class="prix">99€99</span>
                             </div>
                         </div>
@@ -91,17 +91,17 @@
                     <div class="col-6 col-lg-3">
                         <div class="card my-3 border-grey shadow">
                             <a class="stretched-link" href="/pages/femme/produits/manteau2.html"><img class="card-img-top" src="/images/femme/pret-a-porter/veste-manteau/manteau2/manteau2_main.jpg" alt="Duffle-coat mi-long"></a>
-                            <div class="card-body">
-                                <h4 class="card-title">Duffle-coat</h4>
+                            <div class="carte-article card-body">
+                                <h3 class="card-title">Duffle-coat</h3>
                                 <span class="prix">89€99</span>
                             </div>
                         </div>
                     </div>
                     <div class="col-6 col-lg-3">
-                        <div class="card my-3 border-grey shadow">
+                        <div class="carte-article card my-3 border-grey shadow">
                             <a class="stretched-link" href="/pages/femme/produits/veste1.html"><img class="card-img-top" src="/images/femme/pret-a-porter/veste-manteau/veste1/veste1_main.jpg" alt="Blouson court vert foncé"></a>
-                            <div class="card-body">
-                                <h4 class="card-title">Blouson court</h4>
+                            <div class="carte-article card-body">
+                                <h3 class="card-title">Blouson court</h3>
                                 <span class="prix">49€99</span>
                             </div>
                         </div>
@@ -109,8 +109,8 @@
                     <div class="col-6 col-lg-3">
                         <div class="card my-3 border-grey shadow">
                             <a class="stretched-link" href="/pages/femme/produits/veste2.html"><img class="card-img-top" src="/images/femme/pret-a-porter/veste-manteau/veste2/veste2_main.jpg" alt="Trench mi-long"></a>
-                            <div class="card-body">
-                                <h4 class="card-title">Trench mi-long</h4>
+                            <div class="carte-article card-body">
+                                <h3 class="card-title">Trench mi-long</h3>
                                 <span class="prix">59€99</span>
                             </div>
                         </div>
@@ -248,12 +248,14 @@
             <p class="centrer pt-3"><strong><a href="/pages/informations/avis.html">Voir tous les avis</a></strong></p>
         </div>
 
+
     </main>
 
     <!--Footer-->
     <footer class="footer_dynamic"></footer>
 
     <script src="/javascript/header_footer_injecteur.js"></script>
+
 
 </body>
 
