--- a/pages/commande/panier.html
+++ b/pages/commande/panier.html
@@ -64,16 +64,16 @@
                         <a href="#"><i class="fa fa-trash"></i></a>
                     </div>
                     <div class="div_prix_panier">
-                        <h4>59€99</h4>
+                        <h2 class="prix">59<sup>€99</sup></h2>
                     </div>
                 </div>
-                <hr>
+                <hr/>
                 <div class="produit_panier">
                     <div class="div_img_panier">
                         <a href="/pages/femme/produits/manteau1.html"><img src="/images/femme/pret-a-porter/veste-manteau/manteau1/manteau1_main.jpg" alt="image manteau1 vetement femme pret-a-porter"></a>
                     </div>
                     <div class="div_descr_panier">
-                        <a href="/pages/femme/produits/jean1.html">Manteau imitation fourrure</a><br>
+                        <a href="/pages/femme/produits/jean1.html">Manteau fourrure</a><br>
 
                         <em>Référence 2274097 / GHG906</em><br>Taille : <select name="taille" class="taille_panier">
                         <option value="34" selected>34</option>
@@ -91,7 +91,7 @@
                         <a href="#"><i class="fa fa-trash"></i></a>
                     </div>
                     <div class="div_prix_panier">
-                        <h4>99€99</h4>
+                        <h2>99<sup>€99</sup></h2>
                     </div>
                 </div>
                 <hr>
@@ -115,7 +115,7 @@
                         <a href="#"><i class="fa fa-trash"></i></a>
                     </div>
                     <div class="div_prix_panier">
-                        <h4>39€90</h4>
+                        <h2>39<sup>€90</sup></h2>
                     </div>
                 </div>
 
@@ -126,7 +126,7 @@
                 <table class="tableau_panier">
                     <tr>
                         <td>Sous total (TTC)</td>
-                        <td class="right">199€88</td>
+                        <td class="right">199<sup>€88</sup</td>
                     </tr>
                 </table>
                 <hr/> CODE PROMO<br/>
@@ -141,11 +141,11 @@
                     </tr>
                     <tr>
                         <td>TOTAL COMMANDE<br></td>
-                        <td class="right">199€88</td>
+                        <td class="right">199<sup>€88</sup></td>
                     </tr>
                 </table>
                 <input type="checkbox" name="cgv" id="cvg" required><label for="cvg"><em>J'accepte les <a href="/pages/informations/cgv.html">CVG</a><sup> (1)</sup></em></label>
-                <input class="input-submit commander" type="submit" value="COMMANDER"><em><sup>*</sup>À partir de 30€ ou en magasin</em><br/>
+                <input class="input-submit commander" type="submit" value="COMMANDER"><em><sup>*</sup>À partir de 30<sup>€</sup> ou en magasin</em><br/>
                 <em><sup>(1)</sup>Conditions générales de vente</em>
             </div>
 
