--- a/pages/homme/produits/article.html
+++ b/pages/homme/produits/article.html
@@ -48,24 +48,17 @@
             <hr>
             <form id="form_produit" method="POST" action="#">
                 <span class="select_taille">Sélectionner votre taille</span><br>
-
                 <div id="tailles_produit">
                 </div>
-
-
                 <hr>
-
                 <a href="/images/tailles/guide_taille_homme.png" target="_blank">Guide des tailles</a>
                 <hr>
-
-                <input class="input-submit" type="button" value="Ajouter au panier">
+                <input id="btn_ajout_panier" class="input-submit" type="button" value="Ajouter au panier">
             </form>
             <ul class="listes_description">
                 <li class="titre_detail description"><span>+ </span>Description détaillée
-
                 </li>
                 <li class="titre_detail entretien"><span>+ </span>Composition et entretien
-
                 </li>
             </ul>
         </div>
@@ -76,30 +69,30 @@
         <h2>Nos suggestions</h2>
     </div>
     <div class="row row_suggestion">
-        <div class="col col-xl-4">
+        <div class="col-6 col-xl-4">
             <div class="card my-3 border-grey shadow">
                 <a class="stretched-link" href="/pages/homme/produits/pull1.html"><img class="card-img-top" src="/images/homme/pret-a-porter/pulls/pull1/pull1_main.jpg" alt="Pull col montant"></a>
-                <div class="card-body">
-                    <h4 class="card-title">Pull col montant</h4>
-                    <span class="prix">29€99</span>
+                <div class="carte-article card-body">
+                    <h3 class="card-title">Pull col montant</h3>
+                    <span class="prix">29<sup>€99</sup></span>
                 </div>
             </div>
         </div>
-        <div class="col col-xl-4">
+        <div class="col-6 col-xl-4">
             <div class="card my-3 border-grey shadow">
                 <a class="stretched-link" href="/pages/homme/produits/jean1.html"><img class="card-img-top" src="/images/homme/pret-a-porter/jeans/jean1/jean1_main.jpg" alt="Jean coupe slim"></a>
-                <div class="card-body">
-                    <h4 class="card-title">Jean coupe slim</h4>
-                    <span class="prix">59€99</span>
+                <div class="carte-article card-body">
+                    <h3 class="card-title">Jean coupe slim</h3>
+                    <span class="prix">59<sup>€99</sup></span>
                 </div>
             </div>
         </div>
-        <div class="col col-xl-4">
+        <div class="col-6 col-xl-4">
             <div class="card my-3 border-grey shadow">
                 <a class="stretched-link" href="/pages/homme/produits/noeud1.html"><img class="card-img-top" src="/images/homme/accessoires/noeuds/noeud1/noeud1_main.jpg" alt="Noeud papillon noué"></a>
-                <div class="card-body">
-                    <h4 class="card-title">Noeud papillon noué</h4>
-                    <span class="prix">24€90</span>
+                <div class="carte-article card-body">
+                    <h3 class="card-title">Noeud papillon noué</h3>
+                    <span class="prix">24<sup>€99</sup></span>
                 </div>
             </div>
         </div>
