--- a/pages/femme/femme_categories.html
+++ b/pages/femme/femme_categories.html
@@ -129,11 +129,11 @@
 
                     </div>
                     <a class="carousel-control-prev" href="#carousel_access_femme" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="carousel-control-prev-icon grey" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
                     </a>
                     <a class="carousel-control-next" href="#carousel_access_femme" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="carousel-control-next-icon grey" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
