--- a/pages/femme/produits/robe2.html
+++ b/pages/femme/produits/robe2.html
@@ -43,6 +43,7 @@
     <footer class="footer_dynamic"></footer>
 
     <script src="/javascript/header_footer_injecteur.js"></script>
+    <script src="/javascript/constructor_article.js"></script>
     <script src="/javascript/article_injector.js"></script>
     <script src="/javascript/article_femme/articles.js"></script>
     <script src="/javascript/article_femme/robe2.js"></script>
