--- a/pages/homme/homme_produits.html
+++ b/pages/homme/homme_produits.html
@@ -142,6 +142,7 @@
     <footer class="footer_dynamic"></footer>
 
     <script src="/javascript/header_footer_injecteur.js"></script>
+    <script src="/javascript/constructor_article.js"></script>
     <script src="/javascript/article_injector_h.js"></script>
     <script src="/javascript/article_homme/articles.js"></script>
     <script src="/javascript/affichage_produits.js"></script>
