--- a/pages/homme/produits/article.html
+++ b/pages/homme/produits/article.html
@@ -44,7 +44,7 @@
         <div class="produit_description">
             <h3>xxx</h3>
             <p>xxx</p>
-            <h4><strong></strong></h4>
+            <h4><strong>000</strong></h4>
             <hr>
             <form id="form_produit" method="POST" action="#">
                 <span class="select_taille">Sélectionner votre taille</span><br>
@@ -68,33 +68,60 @@
     <div>
         <h2>Nos suggestions</h2>
     </div>
-    <div class="row row_suggestion">
-        <div class="col-6 col-xl-4">
-            <div class="card my-3 border-grey shadow">
-                <a class="stretched-link" href="/pages/homme/produits/pull1.html"><img class="card-img-top" src="/images/homme/pret-a-porter/pulls/pull1/pull1_main.jpg" alt="Pull col montant"></a>
-                <div class="carte-article card-body">
-                    <h3 class="card-title">Pull col montant</h3>
-                    <span class="prix">29<sup>€99</sup></span>
-                </div>
+    <!--Carousel-lg-->
+    <div class="container-fluid carousel-lg">
+        <div id="carousel-lg" class="carousel slide" data-ride="carousel" data-interval="9000">
+            <div class="carousel-inner row w-100 mx-auto" role="listbox">
+                <div class="suggestion_car_3_1 carousel-item active"></div>
+                <div class="suggestion_car_3_2 carousel-item"></div>
             </div>
+            <a class="carousel-control-prev" href="#carousel-lg" role="button" data-slide="prev">
+                <i class="fa fa-chevron-left fa-lg text-muted"></i>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next text-faded" href="#carousel-lg" role="button" data-slide="next">
+                <i class="fa fa-chevron-right fa-lg text-muted"></i>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
-        <div class="col-6 col-xl-4">
-            <div class="card my-3 border-grey shadow">
-                <a class="stretched-link" href="/pages/homme/produits/jean1.html"><img class="card-img-top" src="/images/homme/pret-a-porter/jeans/jean1/jean1_main.jpg" alt="Jean coupe slim"></a>
-                <div class="carte-article card-body">
-                    <h3 class="card-title">Jean coupe slim</h3>
-                    <span class="prix">59<sup>€99</sup></span>
-                </div>
+    </div>
+    <!--Carousel-md-->
+    <div class="container-fluid carousel-md">
+        <div id="carousel-md" class="carousel slide" data-ride="carousel" data-interval="9000">
+            <div class="carousel-inner row w-100 mx-auto" role="listbox">
+                <div class="suggestion_car_2_1 carousel-item active"></div>
+                <div class="suggestion_car_2_2 carousel-item"></div>
+                <div class="suggestion_car_2_3 carousel-item"></div>
             </div>
+            <a class="carousel-control-prev" href="#carousel-md" role="button" data-slide="prev">
+                <i class="fa fa-chevron-left fa-lg text-muted"></i>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next text-faded" href="#carousel-md" role="button" data-slide="next">
+                <i class="fa fa-chevron-right fa-lg text-muted"></i>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
-        <div class="col-6 col-xl-4">
-            <div class="card my-3 border-grey shadow">
-                <a class="stretched-link" href="/pages/homme/produits/noeud1.html"><img class="card-img-top" src="/images/homme/accessoires/noeuds/noeud1/noeud1_main.jpg" alt="Noeud papillon noué"></a>
-                <div class="carte-article card-body">
-                    <h3 class="card-title">Noeud papillon noué</h3>
-                    <span class="prix">24<sup>€99</sup></span>
-                </div>
+    </div>
+    <!--Carousel-sm-->
+    <div class="container-fluid carousel-sm">
+        <div id="carousel-sm" class="carousel slide" data-ride="carousel" data-interval="9000">
+            <div class="carousel-inner row w-100 mx-auto" role="listbox">
+                <div class="suggestion_car_1_1 carousel-item active"></div>
+                <div class="suggestion_car_1_2 carousel-item"></div>
+                <div class="suggestion_car_1_3 carousel-item"></div>
+                <div class="suggestion_car_1_4 carousel-item"></div>
+                <div class="suggestion_car_1_5 carousel-item"></div>
+                <div class="suggestion_car_1_6 carousel-item"></div>
             </div>
+            <a class="carousel-control-prev" href="#carousel-sm" role="button" data-slide="prev">
+                <i class="fa fa-chevron-left fa-lg text-muted"></i>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next text-faded" href="#carousel-sm" role="button" data-slide="next">
+                <i class="fa fa-chevron-right fa-lg text-muted"></i>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
     </div>
 </div>
