--- a/pages/commande/mes_commandes.html
+++ b/pages/commande/mes_commandes.html
@@ -36,43 +36,93 @@
 
         <div class="principale container">
             <h2>Liste de mes commandes</h2>
-            <table class="table table-striped table-bordered table-hover text-center">
+            <table class="table table-striped table-bordered text-center">
                 <thead>
                     <tr>
-
-                        <th scope="col">Date</th>
-                        <th scope="col">N° de commande</th>
-                        <th scope="col">Total</th>
-                        <th scope="col">Statut</th>
+                        <th colspan="2">Commande N° <a href="#">0269.1.534.4282</a></th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-
+                        <td class="td_gauche">Date</td>
                         <td>08/12/2020</td>
-                        <td><a href="#">0269.1.534.4282</a></td>
-                        <td>59€60</td>
+                    </tr>
+                    <tr>
+                        <td class="td_gauche">Total</td>
+                        <td>53<sup>€90</sup></td>
+                    </tr>
+                    <tr>
+                        <td class="td_gauche">Statut</td>
                         <td>En cours de livraison</td>
                     </tr>
                     <tr>
-
-                        <td>23/11/2020</td>
-                        <td><a href="#">0252.1.331.7882</a></td>
-                        <td>45€00</td>
+                        <td class="td_gauche">Voir la facture</td>
+                        <td><a href="/images/facture.png" target="_blank"><i class="fa fa-file"></i></a></td>
+                    </tr>
+                    <tr>
+                        <td class="td_gauche">Télécharger la facture</td>
+                        <td><a href="/images/facture.png" download><i class="fa fa-file"></i></a></td>
+                    </tr>
+                </tbody>
+            </table>
+            <table class="table table-striped table-bordered text-center">
+                <thead>
+                    <tr>
+                        <th colspan="2">Commande N° <a href="#">0250.1.134.4581</a></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="td_gauche">Date</td>
+                        <td>22/10/2020</td>
+                    </tr>
+                    <tr>
+                        <td class="td_gauche">Total</td>
+                        <td>90<sup>€40</sup></td>
+                    </tr>
+                    <tr>
+                        <td class="td_gauche">Statut</td>
                         <td>Livré</td>
                     </tr>
                     <tr>
-
-                        <td>03/09/2020</td>
-                        <td><a href="#">0043.1.596.7056</a></td>
-                        <td>67€50</td>
+                        <td class="td_gauche">Voir la facture</td>
+                        <td><a href="/images/facture.png" target="_blank"><i class="fa fa-file"></i></a></td>
+                    </tr>
+                    <tr>
+                        <td class="td_gauche">Télécharger la facture</td>
+                        <td><a href="/images/facture.png" download><i class="fa fa-file"></i></a></td>
+                    </tr>
+                </tbody>
+            </table>
+            <table class="table table-striped table-bordered text-center">
+                <thead>
+                    <tr>
+                        <th colspan="2">Commande N° <a href="#">0269.1.534.4282</a></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="td_gauche">Date</td>
+                        <td>01/09/2020</td>
+                    </tr>
+                    <tr>
+                        <td class="td_gauche">Total</td>
+                        <td>75<sup>€80</sup></td>
+                    </tr>
+                    <tr>
+                        <td class="td_gauche">Statut</td>
                         <td>Livré</td>
                     </tr>
-
+                    <tr>
+                        <td class="td_gauche">Voir la facture</td>
+                        <td><a href="/images/facture.png" target="_blank"><i class="fa fa-file"></i></a></td>
+                    </tr>
+                    <tr>
+                        <td class="td_gauche">Télécharger la facture</td>
+                        <td><a href="/images/facture.png" download><i class="fa fa-file"></i></a></td>
+                    </tr>
                 </tbody>
-
             </table>
-
 
         </div>
 
