--- a/pages/femme/femme_produits.html
+++ b/pages/femme/femme_produits.html
@@ -681,6 +681,7 @@
     <footer class="footer_dynamic"></footer>
 
     <script src="/javascript/header_footer_injecteur.js"></script>
+    <script src="/javascript/constructor_article.js"></script>
     <script src="/javascript/article_injector.js"></script>
 </body>
 
