--- a/pages/femme/produits/article.html
+++ b/pages/femme/produits/article.html
@@ -86,33 +86,60 @@
     <div>
         <h2>Nos suggestions</h2>
     </div>
-    <div class="row row_suggestion">
-        <div class="col-6 col-xl-4">
-            <div class="card my-3 border-grey shadow">
-                <a class="stretched-link" href="/pages/femme/produits/pull1.html"><img class="card-img-top" src="/images/femme/pret-a-porter/pull-gilet/pull1/pull1_main.jpg" alt="Pull jacquard col rond gris"></a>
-                <div class="carte-article card-body">
-                    <h4 class="card-title">Pull col montant</h4>
-                    <span class="prix">45<sup>€99</sup></span>
-                </div>
+    <!--Carousel-lg-->
+    <div class="container-fluid carousel-lg">
+        <div id="carousel-lg" class="carousel slide" data-ride="carousel" data-interval="9000">
+            <div class="carousel-inner row w-100 mx-auto" role="listbox">
+                <div class="suggestion_car_3_1 carousel-item active"></div>
+                <div class="suggestion_car_3_2 carousel-item"></div>
             </div>
+            <a class="carousel-control-prev" href="#carousel-lg" role="button" data-slide="prev">
+                <i class="fa fa-chevron-left fa-lg text-muted"></i>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next text-faded" href="#carousel-lg" role="button" data-slide="next">
+                <i class="fa fa-chevron-right fa-lg text-muted"></i>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
-        <div class="col-6 col-xl-4">
-            <div class="card my-3 border-grey shadow">
-                <a class="stretched-link" href="/pages/femme/produits/jean2.html"><img class="card-img-top" src="/images/femme/pret-a-porter/jean-pantalon/jean2/jean2_main.jpg" alt="Jean push up"></a>
-                <div class="carte-article card-body">
-                    <h4 class="card-title">Jean push up</h4>
-                    <span class="prix">49<sup>€99</sup></span>
-                </div>
+    </div>
+    <!--Carousel-md-->
+    <div class="container-fluid carousel-md">
+        <div id="carousel-md" class="carousel slide" data-ride="carousel" data-interval="9000">
+            <div class="carousel-inner row w-100 mx-auto" role="listbox">
+                <div class="suggestion_car_2_1 carousel-item active"></div>
+                <div class="suggestion_car_2_2 carousel-item"></div>
+                <div class="suggestion_car_2_3 carousel-item"></div>
             </div>
+            <a class="carousel-control-prev" href="#carousel-md" role="button" data-slide="prev">
+                <i class="fa fa-chevron-left fa-lg text-muted"></i>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next text-faded" href="#carousel-md" role="button" data-slide="next">
+                <i class="fa fa-chevron-right fa-lg text-muted"></i>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
-        <div class="col-6 col-xl-4">
-            <div class="card my-3 border-grey shadow">
-                <a class="stretched-link" href="/pages/femme/produits/chaussures1.html"><img class="card-img-top" src="/images/femme/accessoires/chaussures/chaussures1/chaussures1_main.jpg" alt="Boots chelsea"></a>
-                <div class="carte-article card-body">
-                    <h4 class="card-title">Boots chelsea</h4>
-                    <span class="prix">79<sup>€99</sup></span>
-                </div>
+    </div>
+    <!--Carousel-sm-->
+    <div class="container-fluid carousel-sm">
+        <div id="carousel-sm" class="carousel slide" data-ride="carousel" data-interval="9000">
+            <div class="carousel-inner row w-100 mx-auto" role="listbox">
+                <div class="suggestion_car_1_1 carousel-item active"></div>
+                <div class="suggestion_car_1_2 carousel-item"></div>
+                <div class="suggestion_car_1_3 carousel-item"></div>
+                <div class="suggestion_car_1_4 carousel-item"></div>
+                <div class="suggestion_car_1_5 carousel-item"></div>
+                <div class="suggestion_car_1_6 carousel-item"></div>
             </div>
+            <a class="carousel-control-prev" href="#carousel-sm" role="button" data-slide="prev">
+                <i class="fa fa-chevron-left fa-lg text-muted"></i>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next text-faded" href="#carousel-sm" role="button" data-slide="next">
+                <i class="fa fa-chevron-right fa-lg text-muted"></i>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
     </div>
 </div>
