--- a/pages/femme/produits/jean1-fixe.html
+++ b/pages/femme/produits/jean1-fixe.html
@@ -186,6 +186,7 @@
     <footer class="footer_dynamic"></footer>
 
     <script src="/javascript/header_footer_injecteur.js"></script>
+    <script src="/javascript/constructor_article.js"></script>
     <script src="/javascript/constructeur_article.js"></script>
 
 
