--- a/pages/homme/produits/manteau2.html
+++ b/pages/homme/produits/manteau2.html
@@ -43,6 +43,7 @@
     <footer class="footer_dynamic"></footer>
 
     <script src="/javascript/header_footer_injecteur.js"></script>
+    <script src="/javascript/constructor_article.js"></script>
     <script src="/javascript/article_injector_h.js"></script>
     <script src="/javascript/article_homme/articles.js"></script>
     <script src="/javascript/article_homme/manteau2.js"></script>
