Ajout images-liens navbar

--- a/header.html
+++ b/header.html
@@ -51,6 +51,7 @@
                                         <li class="nav-sous-categorie"><a href="/pages/femme/femme_produits.html?#jupe">Jupes</a></li>
                                         <li class="nav-sous-categorie"><a href="/pages/femme/femme_produits.html?#chemisier_blouse">Chemisiers - Blouses</a></li>
                                     </ul>
+
                                 </li>
 
                                 <li class="nav-categorie"><a href="/pages/femme/femme_produits.html?#accessoires">Accessoires</a>
@@ -59,6 +60,10 @@
                                         <li class="nav-sous-categorie"><a href="/pages/femme/femme_produits.html?#lunettes">Lunettes</a></li>
                                         <li class="nav-sous-categorie"><a href="/pages/femme/femme_produits.html?#sac">Sacs à main</a></li>
                                     </ul>
+                                </li>
+                                <li class="nav-categorie lien-img-nav">
+                                    <a href="/pages/femme/femme_produits.html?#pap"><img src="/images/image_pap_femme.jpg"><span>Prêt-à-porter</span></a>
+                                    <a href="/pages/femme/femme_produits.html?#accessoires"><img src="/images/image_accessoire_femme.jpg"><span>Accessoires</span></a>
                                 </li>
                             </ul>
 
@@ -88,6 +93,10 @@
                                         <li class="nav-sous-categorie"><a href="/pages/homme/homme_produits.html?#ceinture">Ceintures</a></li>
                                         <li class="nav-sous-categorie"><a href="/pages/homme/homme_produits.html?#noeud">Noeuds Papillon</a></li>
                                     </ul>
+                                </li>
+                                <li class="nav-categorie lien-img-nav">
+                                    <a href="/pages/homme/homme_produits.html?#pap"><img src="/images/image_pap_homme.jpg"><span>Prêt-à-porter</span></a>
+                                    <a href="/pages/homme/homme_produits.html?#accessoires"><img src="/images/image_accessoire_homme.jpg"><span>Accessoires</span></a>
                                 </li>
                             </ul>
                         </li>
